--- a/docs/content/manpages/geowave-ingest-clear.adoc
+++ b/docs/content/manpages/geowave-ingest-clear.adoc
@@ -2,49 +2,4 @@ geowave-ingest-clear(1)
 =======================
 :doctype: manpage
 
-NAME
-----
-geowave-ingest-clear - Delete existing GeoWave content from Accumulo
-
-SYNOPSIS
---------
-*geowave-ingest -clear* <options>
-
-DESCRIPTION
------------
-FOO FOO FOO - The geowave-ingest -clear(1) operator will delete all GeoWave data stored in Accumulo for the provided data set
-
-OPTIONS
--------
--c, --clear::
-Clear ALL data stored with the same prefix as this namespace (optional; default is to append data to the namespace if it exists)
-
--dim, --dimensionality <arg>::
-The dimensionality type for the index, either 'spatial' or 'spatial-temporal' (optional; default is 'spatial')
-
--h, --help::
-Display help
-
--i, --instance-id <arg>::
-The Accumulo instance ID
-
--l, --list::
-List the available ingest types
-
--n, --namespace <arg>::
-The table namespace (optional; default is no namespace)
-
--p, --password <arg>::
-The password for the user
-
--t, --types <arg>::
-Explicitly set the ingest type by name (or multiple comma-delimited types), if not set all available ingest types will be used
-
--u, --user <arg>::
-A valid Accumulo user ID
-
--v, --visibility <arg>::
-The visibility of the data ingested (optional; default is 'public')
-
--z, --zookeepers <arg>::
-A comma-separated list of zookeeper servers that an Accumulo instance is using
+include::manpages/geowave-ingest-clear.txt[]
