--- a/docs/content/manpages/geowave-ingest.adoc
+++ b/docs/content/manpages/geowave-ingest.adoc
@@ -2,49 +2,4 @@ geowave-ingest(1)
 =================
 :doctype: manpage
 
-NAME
-----
-geowave-ingest - Ingest data from a local file system or HDFS into GeoWave
-
-SYNOPSIS
---------
-*geowave-ingest* <operation> <options>
-
-DESCRIPTION
------------
-The geowave-ingest(1) command will ingest data from a local file system or HDFS into GeoWave
-
-OPERATIONS
-----------
--clear::
-Clear ALL data from a GeoWave namespace, this actually deletes Accumulo tables prefixed by the given namespace
-
--hdfsingest::
-Copy supported files from local file system to HDFS and ingest from HDFS
-
--hdfsstage::
-stage supported files in local file system to HDFS
-
--localingest::
-ingest supported files in local file system directly, without using HDFS
-
--poststage::
-ingest supported files that already exist in HDFS
-
-ADDITIONAL
-----------
-
-Options are specific to operation choice. Use <operation> -h for help.
-
-The ingest plugin supports two types of ingest, Local and HDFS. Which you use probably depends on the type and amount of
-data you need to load. The framework handles abstracting across the two methods, so you only need to write the code once.
-
-The hdfsingest option is actually just the hdfsstage and poststage methods chained together. Using them separately is
-useful if you have a use case to ingest the same data multiple times from hdfs, or if you have a process that has already
-loaded the data into hdfs.
-
-Each plugin in the ingest framework is required to identify the type of files it can ingest. The coarse filter is based
-on file extension, and then a secondary filter can be created based on reading the contents of the file.
-
-The intent is to allow the user to point to a directory of files and for the framework to discover and ingest all
-possible types. The user can explicitly select only certain plugins if they need to narrow this down.
+include::manpages/geowave-ingest.txt[]
